Я там что-то сделал, сам не помню что

--- a/src/assets/scss/layout/_theme.scss
+++ b/src/assets/scss/layout/_theme.scss
@@ -1,7 +1,10 @@
 :root {
+  // Norma
   --tabbar--height: 48px;
 
   --large-screen-max-width: 620px;
+  --wide-large-screen-max-width: 1720px;
+
   --mobile-page-vertical-padding: 12px;
   --desktop-page-vertical-padding: 2rem;
 
