--- a/src/assets/scss/layout/_params.scss
+++ b/src/assets/scss/layout/_params.scss
@@ -1,50 +1,16 @@
 :root {
-  --x-font-family: #{$x-font-family};
-  
-  @each $name, $size in $x-font-sizes {
-    --x-font-size--#{$name}: #{$size};
-  }
-
-  @each $name, $weight in $x-font-weights {
-    --x-font-weight--#{$name}: #{$weight};
-  }
-
-  @each $palette_name, $palette_tint in $x-color-palette {
-    --x-color-#{$palette_name}: #{$palette_tint};
-
-    @each $ts_name, $ts in generate-tint-shade($palette_tint) {
-      --x-color-#{$palette_name}--#{$ts_name}: #{$ts};
-    }
-  }
-
-  @each $name, $shadow in $x-box-shadows {
-    --x-box-shadow--#{$name}: #{$shadow};
-  }
-
-  @each $name, $timing in $x-motion-timings {
-    --x-motion-timing--#{$name}: #{$timing};
-  }
-
-  @each $name, $size in $x-border-radius {
-    --x-border-radius--#{$name}: #{$size};
-  }
-
-  @each $name, $color in $x-brands-color {
-    --x-brands-color--#{$name}: #{$color};
-  }
-
-  --x-transition: #{$x-transition};
-}
-
-:root {
+  // Высота таб-бара
   --tabbar--height: 49px;
 
+  // Размеры контейнеров на десктопе
   --large-screen-max-width: 620px;
   --wide-large-screen-max-width: 1720px;
 
+  // Отступы на телефонах
   --mobile-page-vertical-padding: 12px;
   --mobile-page-horizontal-padding: 12px;
 
+  // Отступы на десктопе
   --desktop-page-vertical-padding: 2rem;
   --desktop-page-horizontal-padding: 24px;
 }
