Кто-то сказал бы что коммит дерьма, но я скажу что он хороший

--- a/src/assets/scss/layout/_theme.scss
+++ b/src/assets/scss/layout/_theme.scss
@@ -46,8 +46,8 @@ html {
 
 // Темная тема
 html[data-theme="black"] {
-  --x-background: #111;
-  --x-color: #fffcea;
+  --x-background: #111111;
+  --x-color: #f2f2f0;
 
   --x-divider-color: #292B2E;
 }
