--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -8,8 +8,8 @@
 * { box-sizing: border-box; }
 html { font-size: 62.5%; }
 body {
-	background: var(--x-background);
-	color: var(--x-color);
+	background: var(--x-body--background);
+	color: var(--x-body--color);
 	font-family: var(--x-font-family);
 	font-size: var(--x-font-size--base);
   font-weight: var(--x-font-weight--normal);
