--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,7 +1,3 @@
-@import "@/assets/scss/utilities/_functions.scss";
-@import "@/assets/scss/utilities/_mixins.scss";
-@import "@/assets/scss/utilities/_variables.scss";
-
 @import "@/assets/scss/layout/_params.scss";
 @import "@/assets/scss/layout/_theme.scss";
 
@@ -27,6 +23,10 @@ body {
   /* also see: https://allthingssmitty.com/2020/05/11/css-fix-for-100vh-in-mobile-webkit/ */
   height: -webkit-fill-available;
   -webkit-overflow-scrolling: auto;
+	padding-right:calc(20px - (100vw - 100%));
+	@include on-mobile-device {
+		padding-right: 0;
+	}
 
 	&::-webkit-scrollbar {
 		width: 16px
